--- a/shop/templates/main.html
+++ b/shop/templates/main.html
@@ -25,7 +25,7 @@
           <form method="GET" action="/search">
             <input name="q" id="search-field" placeholder="Search" type="text">
           </form>
-          <div style="display: flex; flex-direction: row">
+          <div class="cards">
             {% for car in cars %}
                 {% include 'common/card.html' %}
             {% endfor %}
