--- a/static/shop/main.css
+++ b/static/shop/main.css
@@ -88,8 +88,8 @@ form {
 
 .card {
   background: white;
-  margin: 20px;
-  border-radius: 20px;
+  margin: 5px;
+  border-radius: 5px;
 
   position: relative;
 
@@ -97,14 +97,30 @@ form {
   box-shadow: gray 3px 3px 5px;
 
   font-size: 20px;
-  font-family: 'Alegreya', serif;
+  font-family: 'Merriweather Sans', sans-serif;
 
   height: 400px;
   width: 300px;
 
   overflow: hidden;
 
+  color: black;
+
   transition: all ease-in-out 200ms;
+}
+
+.card-doubled {
+  height: 400px;
+  width: 610px;
+}
+
+
+
+.cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 930px;
 }
 
 hr {
@@ -117,7 +133,7 @@ hr {
   margin: 25px;
   position: absolute;
   color: white;
-  font-size: 35px;
+  font-size: 24px;
   line-height: 1em;
 
   text-shadow: black 2px 2px 4px;
@@ -130,43 +146,86 @@ hr {
   object-fit: cover;
 }
 
+.card-doubled img {
+    width: 630px;
+    height: 440px;
+}
+
 .card .desc {
   margin: 10px 20px;
   font-size: 15px;
   height: 60px;
+
   overflow: hidden;
+}
+
+.card-doubled .desc {
+  position: absolute;
+  bottom: 20px;
+  height: 94px;
+  right: 10px;
+  color: white;
+  text-align: right;
+  padding: 10px;
+  border-radius: 3px;
+  background-color:rgba(0, 0, 0, 0.5);
+  font-size: 24px;
+
 }
 
 .card .price {
   float: right;
-  margin-right: 30px;
-  font-size: 25px;
+  margin-right: 20px;
+  font-size: 20px;
+
+  color: white;
+
+  padding: 5px;
+  border-radius: 5px;
+  background: #000;
+
 }
 
-.big-card input {
-  display: block;
+
+.card-doubled .price {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  color: white;
+
+  text-shadow: black 2px 2px 4px;
 }
+
 
 .big-card {
   background: white;
   margin: 30px;
-  padding: 30px;
-  border-radius: 30px;
+  border-radius: 10px;
+    padding-top: 20px;
 
   display: flex;
   flex-direction: column;
 
   line-height: 1em;
-  text-indent: 10px;
 
   border: lighgray 1px solid;
   box-shadow: gray 3px 3px 5px;
 
-  font-size: 28px;
+  font-size: 24px;
   font-family: 'Alegreya', serif;
-  width: 50%;
+  width: 80%;
 
   transition: all ease-in-out 200ms;
+}
+
+.big-card img {
+    width: 800px;
+    height: 500px;
+    object-fit: cover;
+}
+
+.big-card .desc {
+    margin: 30px 0;
 }
 
 .footer {
@@ -193,7 +252,7 @@ a:visited {
 }
 
 .card:hover {
-    transform: translateY(-10px);
+    transform: translateY(-4px);
 }
 
 label {
@@ -203,11 +262,66 @@ label {
 
 #search-field {
     height: 30px;
-    margin: 0 150px;
     width: 80%;
 
     padding: 1px 1px 1px 20px;
 
+    margin: 20px 150px;
+
     font-family: 'Merriweather Sans', sans-serif;
 
+}
+
+form {
+    width: 100%;
+    overflow: hidden;
+}
+
+.login-form {
+    width: 40%;
+}
+
+.text-input {
+    background: #f4f4f4;
+    border: none;
+    outline: none;
+    padding: 10px;
+    font-size: 20px;
+    margin: 20px;
+    width: 85%;
+
+    box-shadow: lightgray 1px 1px 3px inset;
+}
+
+.submit-btn {
+    background: linear-gradient(45deg, #00b09b, #96c93d);
+    border: none;
+    color: white;
+    font-size: 25px;
+
+    cursor: pointer;
+
+    padding: 20px 0 20px 0;
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 0 0 10px 10px;
+
+}
+
+.error {
+    margin: 20px;
+    padding: 15px;
+
+    font-family: 'Merriweather Sans', sans-serif;
+
+    font-size: 25px;
+    border-radius: 5px;
+
+    color: white;
+
+    border: #ff5f69;
+    background-color: rgba(249, 15, 14, 0.23);
+
+    box-shadow: lightgray 2px 2px 3px;
+    text-shadow: lightgray 2px 2px 3px inset;
 }
