--- a/static/shop/main.css
+++ b/static/shop/main.css
@@ -277,23 +277,28 @@ form {
     overflow: hidden;
 }
 
-.login-form {
+.form {
     width: 40%;
 }
 
-.text-input {
+.form input {
     background: #f4f4f4;
     border: none;
     outline: none;
     padding: 10px;
     font-size: 20px;
-    margin: 20px;
+    margin: 20px 20px 0 20px;
     width: 85%;
 
     box-shadow: lightgray 1px 1px 3px inset;
 }
 
-.submit-btn {
+.form label {
+    display: block;
+    margin-left: 20px;
+}
+
+input.submit-btn {
     background: linear-gradient(45deg, #00b09b, #96c93d);
     border: none;
     color: white;
@@ -303,9 +308,15 @@ form {
 
     padding: 20px 0 20px 0;
     width: 100%;
-    margin-top: 20px;
+    margin: 20px 0 0 0;
     border-radius: 0 0 10px 10px;
 
+}
+
+.helptext {
+    font-size: 15px;
+    color: gray;
+    margin-left: 20px;
 }
 
 .error {
