--- a/shop/templates/main.html
+++ b/shop/templates/main.html
@@ -16,6 +16,7 @@
                 <a href="/cart">cart</a>
                 <a href="/logout">logout</a>
             {% else %}
+                <a href="/register">register</a>
                 <a href="/accounts/login">login</a>
             {% endif %}
         </div>
