--- a/static/shop/main.css
+++ b/static/shop/main.css
@@ -1,3 +1,5 @@
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
 body {
   margin: 0;
   background: #f4f4f4;
@@ -216,6 +218,14 @@ hr {
   width: 80%;
 
   transition: all ease-in-out 200ms;
+}
+
+.errorlist {
+    list-style: none;
+    color: #d47d77;
+    margin-top: 0;
+    margin-bottom: 0;
+
 }
 
 .big-card img {
