--- a/shop/templates/main.html
+++ b/shop/templates/main.html
@@ -9,18 +9,7 @@
     <link href="{% static 'shop/main.css' %}" rel="stylesheet" type="text/css"></link>
   </head>
   <body>
-    <header class="header">
-        <a href="/" class="gradient-text">Cars</a>
-        <div class="header-tabs">
-            {% if user.is_authenticated %}
-                <a href="/cart">cart</a>
-                <a href="/logout">logout</a>
-            {% else %}
-                <a href="/register">register</a>
-                <a href="/accounts/login">login</a>
-            {% endif %}
-        </div>
-    </header>
+    {% include 'common/header.html' with cart=cart %}
     <div id="app">
       {% block content %}
           <form method="GET" action="/search">
